# old-ideal

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  build.zig  flake.nix  ideal.cabal  main.cpp
.github/workflows/: ci.yml
examples/: euler-014.ideal
src/: lexer.rs  main.cpp  main.rs  math.cpp  math.h
test/: unit.cpp
